tests/errors/init_state/borrow_precondition/drop_borrow_of_never_init.sim
fn f() {
  x: i64;
  r: &drop i64;
  entry:
    r = &drop x;
    return
}
